# sucha-tech

./: .env.example  .gitignore  CLAUDE.md  README.md  demo.sh  docker-compose.gabezo.yml  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
__tests__/: anchorReceipt.test.ts  intentParser.test.ts  policyEvaluator.test.ts
app/: layout.tsx
app/(dashboard)/: layout.tsx
app/(pages)/: page.tsx
app/(public)/: page.tsx
backend/config/: policies.json
backend/db/: index.ts
backend/services/: anchorReceipt.ts  elevenlabs.ts  intentParser.ts  lifi.ts  oracle.ts  policyEvaluator.ts  simulationCache.ts  solana.ts
frontend/components/: AnimatedBackground.tsx  AutoModeSwitch.tsx  ConfirmationModal.tsx  CounterStat.tsx  DailyUsageBar.tsx  MagneticButton.tsx  Navbar.tsx  PageTransition.tsx  ParticleCanvas.tsx  PortfolioWidget.tsx  ProjectSubmissionForm.tsx  SimulationCard.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TopBar.tsx  TransactionSuccess.tsx  VoiceButton.tsx  VoiceSettings.tsx  WalletBar.tsx
gabezo/: collect-logs.sh  run_tests.sh  start.sh  stop.sh  test-cases.yml
mobile/: .env.example  .gitignore  app.json  babel.config.js  eas.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
mobile/app/: index.tsx  (+3 more)
onchain/: Anchor.toml  package.json
onchain/programs/vibe-broker/: Cargo.toml
onchain/programs/vibe-broker/src/: lib.rs
robot/: .env.example  asr.py  broker_client.py  confirm.py  main.py  requirements.txt  tts_player.py  wake_word.py
scripts/: migrate.js  test-apis.js
types/: index.ts
(+46 files in other folders)
