[package]
name = "vibe-broker"
version = "0.1.0"
description = "Vibe Broker — RecordReceipt on-chain program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vibe_broker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
